--- a/tab.css
+++ b/tab.css
@@ -1,29 +1,31 @@
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
 }
 
 /* Style the buttons inside the tab */
 .tab button {
-    background-color: #aaa;
-    color: white;
     float: left;
-    border: none;
+    border: 0;
+    border-bottom: 3px solid #999;
+    padding: 5px;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
     font-size: 20px;
-    width: 50%;
+    margin: 0.5%;
+    width: 49%;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #ddd;
+  border-bottom: 3px solid #333;
 }
+
+/* .tablink.first {
+    border-bottom: 3px solid #333;
+} */
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: #333;
 }
